mímino cambio a documento chal_MediaQ.html

--- a/01_Intro_web/challenges/chal_MediaQ.html
+++ b/01_Intro_web/challenges/chal_MediaQ.html
@@ -17,6 +17,7 @@
         <div class="Caja1A">
             Caja1A
             CAMBIO PARA PROBAR GIT
+            Este es el otro cambio para probar GIT
         </div>
 
         <div class="Caja2A">
