Cambio porque no se había guardado el otro

--- a/FinalProjects/Pinterest1.html
+++ b/FinalProjects/Pinterest1.html
@@ -40,13 +40,13 @@
         <img class="S1" src="https://picsum.photos/200/270">
         <div class="S3Container">
           <img class="S3" src="https://picsum.photos/200/260">
-          <h5>This is a top image</h5>
+          <h5>This is a test for github use in my SIRLAPTOPLANIX</h5>
         </div>
 
 
         <div class="S3Container">
             <img class="S3" src="https://picsum.photos/200/301">
-            <h5>This is a top image</h5>
+            <h5>This is a test for github use in my SIRLAPTOPLANIX</h5>
         </div>
         <img class="S2" src="https://picsum.photos/200/291">
         <img class="S1" src="https://picsum.photos/200/281">
