Test de branch merge 2

--- a/FinalProjects/Pinterest1.html
+++ b/FinalProjects/Pinterest1.html
@@ -86,7 +86,7 @@
         <img class="S1" src="https://picsum.photos/200/274">
         <div class="S3Container">
             <img class="S3" src="https://picsum.photos/200/264">
-            <h5>This is a top image</h5>
+            <h5>This is a change to test the branch merge process</h5>
         </div>
 
 
