Introduction to bucles part1 11.July 2022

--- a/02_JS_Basic/02.3_Conditionals.js/Repaso1.html
+++ b/02_JS_Basic/02.3_Conditionals.js/Repaso1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arrays in JS</title>
-    <script src="./Arrays.js"></script>
+    <title>Repaso 11 Julio 2022</title>
+    <script src="./RepasoOnceJulio.js"></script>
 </head>
 <body>
     
