Ejercicio de palindromos resuelto

--- a/02_JS_Basic/02.6 Objects/Descuento.html
+++ b/02_JS_Basic/02.6 Objects/Descuento.html
@@ -11,13 +11,14 @@
     <h2>Descuento en productos seleccionados:</h2>
     <h3>Tu descuento selccionado: <span id="user-choice"></span> %</h3>
     <h4>Selecciona el descuento a aplicar - </h4>
-    <button id=10>10%</button>
-    <button id=15>15%</button>
-    <button id=20>20%</button>
+    <button id='10'>10%</button>
+    <button id='15'>15%</button>
+    <button id='20'>20%</button>
     <br>
     <br>
+    <h2>Result: <span id="result"></span></h2>
 
     
-    <script src="./EjercicioOb2_1.js"></script>    
+    <script src="./Descuento.js"></script>    
 </body>
 </html>
