--- a/02_JS_Basic/02.6 Objects/EjerciciosFunciones-Ob.html
+++ b/02_JS_Basic/02.6 Objects/EjerciciosFunciones-Ob.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejerciio Objetos 1 14.Julio 2022</title>
-    <script src="./EjercicioOb1.js"></script>
+    <title>Ejericios del 14.July.2022</title>
+    <script src="./EjerciciosFunciones-Ob.js"></script>
 </head>
 <body>
     
