--- a/02_JS_Basic/02.6 Objects/ClassesCreanOb.html
+++ b/02_JS_Basic/02.6 Objects/ClassesCreanOb.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objets</title>
-    <script src="./Objects.js"></script>
+    <title>Ejerciio Objetos 1 14.Julio 2022</title>
+    <script src="./ClassesCreanOb.js"></script>
 </head>
 <body>
     
