--- a/02_JS_Basic/02.6 Objects/Palindromo.html
+++ b/02_JS_Basic/02.6 Objects/Palindromo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejericios del 14.July.2022</title>
-    <script src="./EjerciciosOb2.js"></script>
+    <title>Ejercicio Palindromo</title>
+    <script src="./Palindromo.js"></script>
 </head>
 <body>
     
