--- a/02_JS_Basic/02.6 Objects/Descuento.html
+++ b/02_JS_Basic/02.6 Objects/Descuento.html
@@ -15,8 +15,7 @@
     <button id='15'>15%</button>
     <button id='20'>20%</button>
     <br>
-    <br>
-    <h2>Result: <span id="result"></span></h2>
+    <h4>Precios con descuento: <span id="result"></span></h4>
 
     
     <script src="./Descuento.js"></script>    
