Pequeños cambios del 18.July.2022

--- a/02_JS_Basic/02.6 Objects/Descuento.html
+++ b/02_JS_Basic/02.6 Objects/Descuento.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise of 15.July.2022</title>
+    <title>Exercise of 15.July.2022--Descuento</title>
     
 </head>
 <body>
     <h2>Descuento en productos seleccionados:</h2>
     <h3>Tu descuento selccionado: <span id="user-choice"></span> %</h3>
     <h4>Selecciona el descuento a aplicar - </h4>
-    <button id='10'>10%</button>
-    <button id='15'>15%</button>
-    <button id='20'>20%</button>
+    <button onclick="Descuento('10')" id='10'>10%</button>
+    <button onclick="Descuento('15')" id='15'>15%</button>
+    <button onclick="Descuento('10')" id='20'>20%</button>
     <br>
     <h4>Precios con descuento: <span id="result"></span></h4>
 
