Filter, map and reduce part 1

--- a/02_JS_Basic/02.7 HTML+JS/DOM.html
+++ b/02_JS_Basic/02.7 HTML+JS/DOM.html
@@ -31,7 +31,7 @@
             <input type="radio" name="genero" id="Masculino" checked onclick="SeleccionarGenero()"> Masculino
             <input type="radio" name="genero" id="Femenino" onclick="SeleccionarGenero()"> Femenino
             <input type="radio" name="genero" id="O" onclick="SeleccionarGenero()"> Otro
-            <input id="txtOtro" type="text" class="invisible">
+            <input id="txtOtro" type="text" class="invisible"> <!--Para hacer que la clasea sea invisible de entrada --> -->
             <br>
             <br>
             <label for="">Nivel Académico</label>
