--- a/JS_avanzado/API_NASA_clone/main.html
+++ b/JS_avanzado/API_NASA_clone/main.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <title>Nasa</title>
+    <title>Nasa clone SIR </title>
 </head>
 <body>
 	<div class="container-fluid container pt-3">
@@ -46,10 +47,21 @@
                     <input type="number" id="diasolar">
                 </div>
                 <div class="col">
-                    <button type="button" onclick="traerfoto()">Hacer consulta</button>
+                    <button type="button" class="btn btn-primary" onclick="traerfoto()">Hacer consulta</button>
                 </div>
 
 
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="button" id="botonanterior" onclick="anterior()" class="btn btn-primary ocultar">ANTERIOR</button>
+                </div>
+                <div class="col" id="paginahtml">
+                    
+                </div>
+                <div class="col">
+                    <button type="button" id="botonsiguiente" onclick="siguiente()" class="btn btn-primary ocultar">SIGUIENTE</button>
+                </div>
             </div>
 
 
@@ -59,6 +71,17 @@
         </div>
 
     </div>
+
+
+
+
+
+
+
+    
+ 
+</body>
+</html>
 
 
 
